--- a/client/src/App.css
+++ b/client/src/App.css
@@ -452,16 +452,15 @@ label {
 }
 
 .modal {
-  position: fixed;
-  top: 65%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgb(130, 168, 121);
-  width: 50%;
-  height: 30%;
-  padding: 0px 20px;
-  border-radius: 20px;
-  box-shadow: 8px -3px 100px 20px rgba(161, 201, 168, 1);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(130, 168, 121);
+    width: 50%;
+    padding: 0px 1rem;
+    border-radius: 1rem;
+    box-shadow: 8px -3px 100px 50px rgba(161, 201, 168, 1);
 
 }
 
