--- a/client/src/styles/OrderConfirm.css
+++ b/client/src/styles/OrderConfirm.css
@@ -13,6 +13,13 @@
 .oui{
     cursor: pointer;
 }
+
+.oui:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+.oui:focus {
+    background: rgba(0, 0, 0, 0.178);
+  }
 .bill-message{
 align-self: center;
 font-size: 20px;
