--- a/client/src/App.css
+++ b/client/src/App.css
@@ -63,6 +63,26 @@ li {
   list-style: none;
 }
 
+.horizontal-flex {
+  display: flex;
+}
+
+.vertical-flex {
+  display: flex;
+  flex-direction: column;
+}
+
+.wrap {
+  flex-wrap: wrap;
+}
+
+.marginAuto {
+  margin: auto;
+}
+
+form {
+  min-width: 60vw;
+}
 /********************/
 /****NAVBARRE********/
 /********************/
@@ -523,8 +543,8 @@ label {
   background: rgba(255, 255, 255, 0.6);
   box-shadow: inset 0 0 30px rgb(255, 255, 255);
   border-radius: 20px;
-  padding: 100px 400px 50px 10px;
-  margin: 20px 20px;
+  padding: 50px;
+  margin: auto;
 }
 
 .orders-admin {
