--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,9 +33,9 @@ h1, h3{
   color : white; 
   margin : 1rem; 
 }
-html {
-  /* background: linear-gradient(180deg, rgba(131, 209, 94, 0.54) 0%, rgba(255, 255, 255, 0) 100%); */
-}
+/* html {
+  background: linear-gradient(180deg, rgba(131, 209, 94, 0.54) 0%, rgba(255, 255, 255, 0) 100%);
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
