--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(180deg, rgba(131, 209, 94, 0.54) 0%, rgb(146, 199, 102) 100%);
+  background: linear-gradient(180deg, rgba(250, 250, 250, 0.54) 0%, rgb(199, 250, 199, 0.54) 100%);
   background-repeat: no-repeat;
   min-height : 100vh; 
   font-family: "Montserrat", "Segoe UI", sans-serif !important;
