--- a/client/src/App.css
+++ b/client/src/App.css
@@ -181,11 +181,9 @@ li {
 }
 
 #icon {
-  width: 150px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   margin-top: 10px;
-  margin-right: 30px;
 }
 
 .search_bar {
@@ -695,4 +693,20 @@ li {
 .feedback-success {
   background-color: #4caf50;
 
+}
+
+.product-dropdown{
+  position: absolute;
+  top : 60px; 
+  left : -20px; 
+  background-color: #4caf50;
+  border-radius: 10px;
+  padding : 1rem 0; 
+  padding-right : 3rem; 
+  transition: all .25s ease;
+}
+
+.product-dropdown > * {
+  cursor: pointer;
+  font-size: 1.5rem;
 }
