--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,8 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(180deg, rgba(250, 250, 250, 0.54) 0%, rgb(199, 250, 199, 0.54) 100%);
+/* background: linear-gradient(180deg, rgba(255, 255, 255, 0.54) 0%, #e1d2b8 100%); */
+background: linear-gradient(to bottom right, #ffffff, #aeffbb);
   background-repeat: no-repeat;
   min-height : 100vh; 
   font-family: "Montserrat", "Segoe UI", sans-serif !important;
