--- a/client/src/App.css
+++ b/client/src/App.css
@@ -106,9 +106,20 @@ li {
 .width100 {
   width: 100%;
 }
+
+
 /********************/
 /*****FILTER*********/
 /********************/
+
+#filters {
+  background-color: #ffff;
+  ;
+  left: 0px;
+  width: 25vw;
+  z-index: 100;
+
+}
 
 .range {
   margin: 0px 0px 0px 20px;
@@ -116,8 +127,9 @@ li {
 
 #bottomRange {
   position: relative;
-  left : 120px;
+  left: 120px;
 }
+
 /********************/
 /****NAVBARRE********/
 /********************/
@@ -132,11 +144,11 @@ li {
   max-height: 100px;
 }
 
-.navbar-wrapper{
+.navbar-wrapper {
   background-color: #ffffff;
 }
 
-.sub-nav{
+.sub-nav {
   display: flex;
   justify-content: space-evenly;
   border-top: 1px solid rgb(13, 70, 13);
@@ -145,19 +157,19 @@ li {
   padding-bottom: .5rem;
 }
 
-.sub-nav div{
+.sub-nav div {
   cursor: pointer;
-  border-left : 1px solid transparent; 
-  border-right : 1px solid transparent; 
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
   transition: all .2s ease;
-  width : 90%; 
+  width: 90%;
   text-align: center;
   font-weight: 500;
 }
 
-.sub-nav div:hover{
+.sub-nav div:hover {
   border-color: rgb(13, 70, 13);
-  color :rgb(13, 70, 13);
+  color: rgb(13, 70, 13);
 }
 
 .search_bar {
@@ -238,43 +250,54 @@ li {
   margin: 20px auto;
   display: flex;
   flex-wrap: wrap;
-  background-color: rgba(255, 255, 255, 0.5);
+  gap : 1rem; 
   border-radius: 20px;
-  padding: 0.5rem;
+  padding : 1rem; 
+}
+
+#filters-wrapper {
+  position: relative;
+  top: 2rem;
 }
 
 #filtres {
   width: 100%;
   padding: 20px;
+  position: fixed;
+}
+
+.articles-wrapper {
+  display: flex;
 }
 
 .thumbnail {
   width: 250px;
-  height: 250px;
+  height: 300px;
   margin: 10px auto;
-  padding: 10px;
   align-items: center;
-  border-radius: 10px;
+  border-radius: .25rem;
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.5);
   overflow: hidden;
   transition: all .2s ease;
+  -webkit-box-shadow: 5px 5px 15px 5px #000000;
+  box-shadow: 5px 5px 15px 0px #ABABAB;
 }
 
 .thumbnail:hover {
-  -webkit-transform: scale(1.1);
+  -webkit-transform: scale(1.05);
   /* Safari and Chrome */
-  -moz-transform: scale(1.1);
+  -moz-transform: scale(1.05);
   /* Firefox */
-  -ms-transform: scale(1.1);
+  -ms-transform: scale(1.05);
   /* IE 9 */
-  -o-transform: scale(1.1);
+  -o-transform: scale(1.05);
   /* Opera */
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 .img-wrapper {
-  height: 250px;
+  height: 300px;
   overflow: hidden;
   border-radius: 10px;
 }
@@ -299,18 +322,21 @@ li {
 
 .infos form {
   max-height: 30px;
+  padding-right : 5px;
+  padding-left : 5px;
+  display : flex; 
+  margin-top: 1.6rem;
 }
 
 .infos {
-  width: 270px;
+  width: 100%;
   position: relative;
   z-index: 50;
-  top: -225px;
-  left: -10px;
+  top: -240px;
   background-color: rgba(255, 255, 255, 0.9);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  height: 300px;
+  height: 250px;
   transition: all .2s ease;
 }
 
@@ -320,10 +346,13 @@ li {
 
 .sub-info {
   display: flex;
+  justify-content: space-between;
+  padding-left : 5px;
+  padding-right : 5px;
 }
 
 .sub-info p {
-  margin: 5px 10px 0px 10px;
+  /* margin: 5px 10px 0px 10px; */
   max-height: 40px;
 }
 
@@ -364,9 +393,8 @@ li {
 }
 
 .firstPrice {
-  width: 42px;
   font-weight: bold;
-  left: 200px;
+  left: 190px;
   top: -290px;
 }
 
@@ -723,18 +751,18 @@ li {
 
 }
 
-.product-dropdown{
+.product-dropdown {
   position: absolute;
-  top : 60px; 
-  left : -20px; 
+  top: 60px;
+  left: -20px;
   background-color: #4caf50;
   border-radius: 10px;
-  padding : 1rem 0; 
-  padding-right : 3rem; 
+  padding: 1rem 0;
+  padding-right: 3rem;
   transition: all .25s ease;
 }
 
-.product-dropdown > * {
+.product-dropdown>* {
   cursor: pointer;
   font-size: 1.5rem;
 }
