--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -60,3 +60,13 @@ input::placeholder {
 .hover_annuler:hover{
   color:red;
 }
+
+.lg-char {
+  font-size: 1rem;
+  margin: 30px 0px 5px 10px;
+}
+
+.sm-char {
+  font-size: 0.9rem;
+  margin: 0px 0px 0px 10px;
+}
