--- a/client/src/App.css
+++ b/client/src/App.css
@@ -109,6 +109,7 @@ li {
 
 .center-flex {
   align-items: center;
+  justify-content: center;
 }
 
 .wrap {
@@ -798,4 +799,13 @@ li {
 .product-dropdown>* {
   cursor: pointer;
   font-size: 1.5rem;
+}
+
+.page-number {
+  cursor: pointer;
+  display: inline-block;
+  margin: .5rem;
+}
+
+.pagination {
 }
