--- a/client/src/App.css
+++ b/client/src/App.css
@@ -57,7 +57,7 @@ fieldset {
 
 
 h1 {
-  color: white;
+  color: #22460D;
 }
 
 button,
@@ -75,13 +75,8 @@ input[type="submit"] {
 
 
 input, textarea {
-
   border: 2px solid green;
-
 }
-
-input:focus, textarea:focus {}
-
 
 label {
   font-weight: bold;
@@ -134,7 +129,6 @@ li {
 .width100 {
   width: 100%;
 }
-
 
 /********************/
 /*****FILTER*********/
