--- a/client/src/App.css
+++ b/client/src/App.css
@@ -381,6 +381,14 @@ li {
   top: -300px;
 }
 
+.mystery-infos{
+  top : -200px; 
+}
+
+.mystery-infos:hover{
+  top : -260px;
+}
+
 .sub-info {
   display: flex;
   justify-content: space-between;
@@ -832,3 +840,26 @@ li {
   display: inline-block;
   margin: .5rem;
 }
+
+.slide-mystery{
+  animation : slide-in 2s ease forwards;
+}
+
+@keyframes slide-in{
+  from {
+    opacity: 0;
+  }
+  to{
+    opacity: 1; 
+  }
+}
+
+.arrow{
+  height: 35px;
+  cursor: pointer;
+}
+
+.arrow-left{
+  transform : rotate(180deg); 
+}
+
