--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@ body {
   min-height: 100vh;
   font-family: "Montserrat", "Segoe UI", sans-serif !important;
   font-size: 1.5rem;
-  animation: roll 1000s infinite;
+  /* animation: roll 1000s infinite; */
 }
 
 @keyframes roll {
