--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -5,6 +5,36 @@
     max-height: 60vh;
 }
 
+.bande {
+    background-color: #4caf50ff;
+    height: 50px;
+}
+
+/* .wrapper-rond {
+    width: 50vw; height: 50vw;
+    overflow: hidden;
+    border-radius: 50%;
+    margin: 50px;
+} */
+
+.wrapper-rond {
+    width: 50vw; height: 50vw;
+    overflow: hidden;
+    border-radius: 50%;
+    /* margin-top: 50px;
+    margin-bottom: 50px; */
+    margin: 50px;
+}
+
+.textBox {
+    width: 40%;
+}
+
+.hrGreen {
+    color : #4caf50ff;
+    margin: 50px;
+}
+
 .control-arrow {
     max-height: 80%;
     top : 30% !important;
@@ -33,5 +63,26 @@
 
 .carousel-root {
     border-bottom: solid black 2px;
-    box-shadow: 0px 30px 30px 0px rgba(0, 0, 0, 0.1);;
+    box-shadow: 0px 30px 30px 0px rgba(0, 0, 0, 0.1);
+}
+
+.about {
+    padding: 20px;
+}
+
+.content {
+    padding: 15px;
+    border-top: solid 1px black;
+    border-bottom: solid 1px black;
+    background-color: #ffff;
+    box-shadow: 0px 0px 130px 50px rgba(0, 0, 0, 0.1);;
+}
+
+.content * {
+    margin : 10px;
+}
+
+.aboutTitle {
+    font-size: 3em;
+    margin-bottom: 20px;
 }
