--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -10,29 +10,22 @@
     height: 50px;
 }
 
-/* .wrapper-rond {
-    width: 50vw; height: 50vw;
-    overflow: hidden;
-    border-radius: 50%;
-    margin: 50px;
-} */
-
 .wrapper-rond {
-    width: 50vw; height: 50vw;
+    width: 30vw; height: 30vw;
     overflow: hidden;
     border-radius: 50%;
-    /* margin-top: 50px;
-    margin-bottom: 50px; */
     margin: 50px;
 }
 
 .textBox {
-    width: 40%;
+    width: 30%;
+    padding: 20px;
 }
 
 .hrGreen {
     color : #4caf50ff;
-    margin: 50px;
+    margin: 50px auto;
+    width: 85vw;
 }
 
 .control-arrow {
@@ -40,7 +33,6 @@
     top : 30% !important;
     height: 40%;
     width: 30px;
-    /* border-radius: 50%; */
     background-color: rgba(255, 255, 255, 0.6) !important;
 }
 
@@ -68,6 +60,7 @@
 
 .about {
     padding: 20px;
+    width: 80vw;
 }
 
 .content {
@@ -82,7 +75,12 @@
     margin : 10px;
 }
 
+.content img {
+    width: 50%; height: 50%;
+    flex-shrink: 0;
+}
+
 .aboutTitle {
-    font-size: 3em;
+    font-size: 2.5em;
     margin-bottom: 20px;
 }
