--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -22,6 +22,21 @@
     padding: 20px;
 }
 
+.textSeeds {
+    width: 30%;
+    margin: 50px auto;
+    font-style: italic;
+    text-align: center;
+}
+
+.imgSeed {
+    margin: 50px;
+}
+
+.seeds {
+    margin: 100px;
+}
+
 .hrGreen {
     color : #4caf50ff;
     margin: 50px auto;
@@ -60,7 +75,7 @@
 
 .about {
     padding: 20px;
-    width: 80vw;
+    width: 70vw;
 }
 
 .content {
@@ -78,13 +93,13 @@
     max-width: 40%;
     background-color: rgba(255, 255, 255, 0.9);
     padding: 120px 50px 120px 30px;
-    margin: 100px 0px;
+    margin: 30px 0px;
     border-radius: 5px;
     line-height: 1.7em;
 }
 
 .contentImg {
-    width: 80vw;
+    /* width: 70vw; */
     background-image: url('../assets/10-graines-bonnes-pour-la-sante.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -93,5 +108,5 @@
 
 .aboutTitle {
     font-size: 2.5em;
-    margin-bottom: 20px;
+    margin: 70px 0px;
 }
