--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    max-height: 60vh;
+    max-height: 30vw;
 }
 
 .bande {
@@ -17,13 +17,17 @@
     margin: 50px;
 }
 
+.wrapper-rond img{
+    width: 160%;
+}
+
 .textBox {
     width: 30%;
     padding: 20px;
 }
 
 .textSeeds {
-    width: 30%;
+    width: 50%;
     margin: 50px auto;
     font-style: italic;
     text-align: center;
@@ -79,14 +83,10 @@
 }
 
 .content {
-    /* padding: 15px; */
     border-top: solid 1px black;
     border-bottom: solid 1px black;
     background-color: #ffff;
     box-shadow: 0px 0px 130px 50px rgba(0, 0, 0, 0.1);;
-}
-
-.content * {
 }
 
 .content p {
@@ -99,14 +99,47 @@
 }
 
 .contentImg {
-    /* width: 70vw; */
     background-image: url('../assets/10-graines-bonnes-pour-la-sante.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    /* border: 2px solid white; */
 }
 
 .aboutTitle {
     font-size: 2.5em;
     margin: 70px 0px;
+}
+
+@media (max-width : 1200px ) {
+    .textSeeds {
+        width: 80%;
+    }
+
+    .container {
+        flex-direction: column;
+    }
+
+    .textBox {
+        width: 80%;
+        text-align: center;
+    }
+    .wrapper-rond {
+        width: 40vw; height: 40vw;
+    }
+    .content p {
+        max-width: 60%;
+    }
+}
+
+@media (max-width : 700px ) {
+    .textSeeds {
+        width: 100%;
+    }
+
+    .wrapper-rond {
+        width: 50vw; height: 50vw;
+    }
+
+    .content p {
+        max-width: 100%;
+    }
 }
