--- a/client/src/App.css
+++ b/client/src/App.css
@@ -199,6 +199,8 @@ li {
   border-bottom: 1px solid rgb(13, 70, 13);
   padding-top: .5rem;
   padding-bottom: .5rem;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .sub-nav div {
